# AlienLM

./: .gitignore  README.md  pyproject.toml  requirements-icml.txt  requirements.txt
docs/: index.html
docs/assets/: tokenizer-demo.js
eval/lm_eval_tasks/: arc_easy_chat.yaml  hellaswag_chat.yaml  winogrande_chat.yaml
eval/scripts/: run_code_eval.sh  run_lm_eval.sh
eval/scripts/utils/: evaluate-code.sh  evaluate_all.sh  evaluate_all_plus_code.sh  evaluate_code_evalplus.sh  evaluate_gsm8k.sh  evaluate_gsm8kv2.sh
scripts/smoke/: translator_roundtrip.py
tokenizer/: __init__.py
tokenizer/build_token_freq/: __init__.py  acereason.py  slimorca.py  tulu3.py
tokenizer/token_init/: Efficient_Token_Matcher.py  __init__.py  token_matching.py  token_random.py
training/axolotl/configs/alienlm/: llama3-8b-instruct-alienlm-single.yaml
training/axolotl/configs/tenant-alienlm/: llama3-8b-instruct-multi-tenant.yaml
training/axolotl/deepspeed_configs/: zero1_torch_compile.json
training/axolotl/scripts/: train_alienlm_multi.sh  train_alienlm_single.sh
training/axolotl/tokenizers/: multi_alien_tokenizer.py  single_alien_tokenizer.py
training/axolotl/tokenizers/alien/: README.md
translator/: __init__.py  inverse_segmentation.py  translator.py
