[project]
name = "alienlm"
version = "0.1.0"
description = "Minimal AlienLM tokenizer initialization and translation utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tokenizers>=0.19",
    "transformers>=4.40",
]

[project.optional-dependencies]
freq = [
    "datasets>=3.0",
    "tqdm>=4.66",
]
init = [
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "python-Levenshtein>=0.25",
    "scipy>=1.11",
    "torch>=2.2",
    "tqdm>=4.66",
]
dev = [
    "pytest>=8.0",
]
train = [
    "axolotl==0.8.0",
]
eval = [
    "evalplus>=0.3",
    "lm_eval==0.4.7",
    "vllm==0.7.2",
]

[tool.uv]
package = false
